syntax = "proto2";

package dev.vhonta.content.puller.proto;

import "zio-temporal.proto";
import "content_feed_puller_state.proto";
import "content_integrations.proto";

message LoadPullerStatesParams {
  required dev.vhonta.content.proto.ContentFeedIntegrationType  integrationType = 1;
}

message LoadPullerStatesResult {
  repeated dev.vhonta.content.proto.PullerState states = 1;
}

message UpsertPullerStateParams {
  repeated dev.vhonta.content.proto.PullerState states = 1;
}

message UpsertPullerStateResult {
}
